<resources>
    <string name="app_name">Soundio</string>
    <string name="notFound">Nicht angegeben</string>
    <string name="loeschenAnweisung">Löschen</string>
    <string name="bearbeitenAnweisung">Bearbeiten</string>
    <string name="addToPlaylist">Zur Playlist hinzufügen</string>
    <string name="addNewFolder">Ordner entfernen oder neuen hinzufügen</string>
    <string name="remFromPlaylist">Von Playlist entfernen</string>
    <string name="confirmation">Speichern</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="playPause">Play/Pause</string>
    <string name="searchFolder">Ordner suchen...</string>

    <string name="playlistNameHint">Neuer Name</string>
    <string name="playlistDescHint">Playlist umbennen</string>
    <string name="playlistMainHint">Playlist Name</string>
    <string name="sucheHint">Hier suchen...</string>
    <string name="fileHint">Dateipfad</string>

    <string name="playlist">Playlist</string>
    <string name="audio">Audiodatei</string>

    <string name="audioTitleHint">Song bearbeiten</string>
    <string name="audioHint">Titel</string>
    <string name="audioArtistHint">Künstler</string>
    <string name="audioGenreHint">Genre</string>
    <string name="audioDateHint">Datum</string>
    <string name="dateiSuchDots">...</string>
</resources>