<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:elevation="8dp"
    android:minWidth="200dp"
    android:background="@color/black">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditAudioPopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bearbeitenAnweisung"
        app:icon="@drawable/edit_24px"
        style="@style/Widget.Material3.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddToPlaylistPopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addToPlaylist"
        app:icon="@drawable/playlist_add_24px"
        style="@style/Widget.Material3.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRemoveFromPlaylistPopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remFromPlaylist"
        app:icon="@drawable/playlist_remove_24px"
        style="@style/Widget.Material3.Button.TextButton"/>

</LinearLayout>