<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black">

    <!-- Checkbox zum Wechseln -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleAddOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddPlaylist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playlist"
            android:textColor="@color/primary_accent"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddAudio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audio"
            android:textColor="@color/primary_accent"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <!-- Bereich für neue Playlist -->
    <LinearLayout
        android:id="@+id/layoutNewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlistMainHint"
            android:textColorHint="@color/primary_accent"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPlaylistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSavePlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirmation"/>

    </LinearLayout>

    <!-- Bereich für neue Audiodatei -->
    <LinearLayout
        android:id="@+id/layoutNewAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/audioHint"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAudioTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/audioArtistHint"
            android:layout_marginTop="8dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAudioArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/audioGenreHint"
            android:layout_marginTop="8dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAudioGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAudioDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/audioDateHint"
            android:layout_marginTop="8dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/calendar_month_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAudioDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Dateipfad Auswahl -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/fileHint"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAudioPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBrowse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/dateiSuchDots"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirmation"/>

    </LinearLayout>

</LinearLayout>