<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:elevation="8dp"
    android:minWidth="250dp"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlistDescHint"
        android:textSize="16sp"
        android:textColor="@color/primary_accent"
        android:paddingBottom="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/playlistNameHint"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/primary_accent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPlaylistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_accent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveEditPopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirmation"/>

</LinearLayout>